--- a/css/main2.css
+++ b/css/main2.css
@@ -1,27 +1,11 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-    font-family: 'Roboto', sans-serif;
-    list-style: none;
-    text-decoration: none;
-}
-
 /* website variables */
 :root{
     --background:rgba(244, 124, 0, 1);
+    --Mbackground:#EEF1F4;
 }
 
-/* box reset */
-html {
-    box-sizing: border-box;
-}
-
-*,
-*:before,
-*:after {
-    box-sizing: inherit;
+body {
+    font-family: 'Roboto', sans-serif;
 }
 
 /* nav style start here */
@@ -45,8 +29,13 @@ header {
 
 #logo {
     text-align: center;
+}
+
+#logo img {
     padding: 20px 0;
-} 
+    width: 200px;
+    animation: shakeButton 2s infinite; 
+}
 
 #search {
     text-align: center;
@@ -60,43 +49,7 @@ header {
     border: 1px solid #444;
 }
 
-main {
-    background-color: var(--background);
-}
 
-#action {
-    padding: 50px 0 50px 0;
-    background-color: #fff;
-    border-radius: 30px 30px 0 0;
-}
-
-#action-text {
-    text-align: center;
-    margin-bottom: 50px;
-}
-
-#action-items {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-content: space-between;
-}
-
-.action-item {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-.action-item img {
-    align-self: center;
-    width: 30vw;
-    margin-bottom: 10px;
-}
-
-.action-item span {
-    text-align: center;
-    font-size: 20px;
-}
 
 /* nav icons to incert later */
 /* .nav-icon i{
@@ -164,84 +117,92 @@ nav a:hover {
 
 /* Take action start */
 
-.Update-news{
-    position: relative;
-    top: 100px;
-    
+main {
+    background-color: var(--background);
 }
-.up-center-text h2{
+
+.action {
+    padding: 50px 0 50px 0;
+    background-color: #fff;
+    border-radius: 30px 30px 0 0;
+}
+
+.action-text {
     text-align: center;
-    color: #111;
-    font-size: 25px;
-    text-transform: capitalize;
-    font-weight: 700;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
+    font-size: 32px;
 }
-.cart img{
-    width: 380px;
-    height: auto;
-    border-radius: 5px;
-}
-.update-cart{
+
+.action-items {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(380px, auto));
-    gap: 1rem;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: space-between;
 }
-.cart h5{
-    color: #636872;
+
+.p-action {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.p-action img {
+    align-self: center;
+    width: 30vw;
+    margin-bottom: 10px;
+}
+
+.p-action span {
+    text-align: center;
     font-size: 14px;
-    text-transform: capitalize;
-    font-weight: 500;
-}
-.cart h4{
-    color: #111;
-    font-size: 18px;
-    font-weight: 600;
-}
-.cart p{
-    color: #707070;
-    font-size: 15px;
-    max-width: 380px;
-    line-height: 25px;
-    margin-bottom: 12px;
-}
-.cart h6{
-    color: #151515;
-    font-size: 14px;
-    font-weight: 500;
 }
 
 /* Take action end */
-/* main content starts */
 
-.center-text h2{
+
+
+/* main content starts */
+.trending-rentals{
+     background-color: var(--Mbackground);  
+     padding: 0 10px;
+}
+
+.text {
+    padding-top: 25px;
+}
+
+.text h2{
     color: #111;
     font-size: 28px;
     text-transform: capitalize;
     text-align: center;
     margin-bottom: 30px;
 }
-.center-text span{
-    color: #EE1C47;
+.text p{
+    color: #787172;
 }
 .products{
+    margin: 20px 0;
+    padding-bottom: 20px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(260px, auto));
-    gap: 2rem;
+    grid-template-columns: auto auto;
+    gap: 1rem;
 }
-.row{
+.p-container {
+    background-color: var(--background);
     position: relative;
+    padding: 5px;
+    border-radius: 30px;
     transition: all .40s;
 }
-.row img{
+.p-container img{
     width: 100%;
     height: auto;
+    border-radius: 30px;
     transition: all .40s;
 }
-.row img:hover{
+.p-container img:hover{
     transform: scale(0.9);
 }
-
 .product-text h5{
     position: absolute;
     top: 13px;
@@ -250,40 +211,130 @@ nav a:hover {
     font-size: 12px;
     font-weight: 500;
     text-transform: uppercase;
-    background-color: #27b737;
+    background-color:var(--background);
     padding: 3px 10px;
     border-radius: 2px;
+    animation: pulse-animation 1s infinite;
 }
 .heart-icon{
     position: absolute;
     right: 0;
+    margin-right: 30px;
     font-size: 20px;
 }
 .heart-icon:hover{
     color: #EE1C47;
 }
 .ratting i{
-    color: #FF8C00;
-    font-size: 18px;
+    color: black;
+    font-size: 20px;
 }
 .price h4{
-    color: #111;
-    font-size: 16px;
+    color: white;
+    font-size: 15px;
     text-transform: capitalize;
     font-weight: 400;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 .price p{
     color: #151515;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 600;
+    padding-bottom: 20px;
 }
 
 /* main content ends */
 
 
 
+/* our team start */
+.sectionteam {  
+    padding: 20px 10px;
+}
 
+.sectionteam p {  
+    padding: 20px 10px;
+}
 
+.line {
+    margin: 0 10vw;
+    border: 2px var(--background) solid;
+}
+ 
+.team-1 {
+    display: flex; 
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+}
+
+.team-1 img {
+    width: 80px;
+    flex: 1;
+    margin-right: 10px;
+    border-radius: 20px;
+    border: 2px solid #110c0c;
+}
+
+.team-1info {
+    display: flex;
+    flex-direction: column;
+    border-bottom: none;
+    flex: 1;
+} 
+
+.team-1info h2 {
+    font-size: 28px;
+    padding-bottom: 10px;
+}
+
+.team-1info h3 {
+    font-size: 18px;
+    padding-bottom: 10px;
+}
+
+.team-1info p {
+    font-size: 12px;
+}
+
+.s-team {
+    text-align: center;
+    font-size: 40px;
+    margin-bottom: 30px;
+}
+
+/* our team end*/
+
+/* animatation for logo and take action */
+@keyframes shakeButton {
+    0% {
+        transform: translateX(0);
+    }
+    25% {
+        transform: translateX(-5px);
+    }
+    75% {
+        transform: translateX(5px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+@keyframes pulse-animation {
+    0% {
+      transform: scale(1);
+      opacity: 1;
+    }
+    50% {
+      transform: scale(1.2);
+      opacity: 0.5;
+    }
+    100% {
+      transform: scale(1);
+      opacity: 1;
+    }
+  }
 
 
 
@@ -298,7 +349,7 @@ nav a:hover {
         display: grid;
         grid-template-columns: 1fr auto minmax(600px,3fr) 1fr;
     }
-    .logo{
+    #logo{
         grid-columns: 2 / span 1;
 
     }
@@ -343,5 +394,4 @@ nav a:hover {
         transform: scale(1,1);
     }
 }
-
 
