--- a/css/main2.css
+++ b/css/main2.css
@@ -25,6 +25,7 @@ header {
     border: none;
     background: transparent;
     cursor: pointer;
+    
 }
 
 #logo {
@@ -49,76 +50,148 @@ header {
     border: 1px solid #444;
 }
 
-
-
-/* nav icons to incert later */
-/* .nav-icon i{
-    margin-right: 20px;
-    color: black;
-    font-size: 25px;
-    font-weight: 400;
-    transition: all .42s ease;
-}
-.nav-icon i:hover{
-    transform: scale(1.1);
-    color: red;
-} */
-
-
-/* making the hambuger menu */
+/* nav style end here */
 
 
 
+/* making the hambuger menu start */
 
-
-
-
-/* working outside in */
-
-nav {
-    position: absolute;
-    text-align: left;
-    top: 100%;
-    left:0;
-    background: var(--background);
-    width:100%; 
-    transform: scale(1, 0);
-    transform-origin: top;
-    transition: transform 400ms ease-in-out;                  
+#menuToggle
+{
+  display: block;
+  position: relative;
+  top: 50px;
+  left: 50px;
+  
+  z-index: 1;
+  
+  -webkit-user-select: none;
+  user-select: none;
 }
 
-nav li{
-    margin-bottom: 1em;
-    margin-left: 1em;
+#menuToggle a
+{
+  text-decoration: none;
+  color: #ffffff;
+  transition: color 0.3s ease;
 }
 
-nav a {
-    color: white;
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    opacity: 0;
-    transition: opacity 150ms ease-in-out;
+#menuToggle a:hover
+{
+  color: var(--background);
 }
-nav a:hover {
-   color: black;
+
+
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  
+  cursor: pointer;
+  
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+  
+  -webkit-touch-callout: none;
 }
-.nav-toggle:checked ~ nav{
-    transform: scale(1, 1);
-} 
 
-.nav-toggle:checked ~ nav a {
-    opacity: 1;
-    transition: opacity 250ms ease-in-out;
-} 
+/* hamburger menu */
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  
+  background:black;
+  border-radius: 3px;
+  
+  z-index: 1;
+  
+  transform-origin: 4px 0px;
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
 
-.nav-toggle:checked ~ nav a:hover {
-    opacity: 0.5;
-} 
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+/* Transform all the slices of hamburger into a crossmark. */
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #ffffff;
+}
+
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/* the last slices goes the other direction */
+
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/* Making this absolute positioned at the top left of the screen */
+
+#menu
+{
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  
+  background: rgba(56, 36, 14, 0.811);
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+
+  /* to stop flickering of text in safari */
+  
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+/* And let's slide it in from the left */
+
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
+/* making the hambuger menu ends */
+
 
 /* Take action start */
 
 main {
-    background-color: var(--background);
+    background-color: var(--Mbackground);
 }
 
 .action {
@@ -306,6 +379,56 @@ main {
 
 /* our team end*/
 
+/* contact us start */
+
+.container {
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: var(--background);
+  }
+  
+  h1 {
+    text-align: center;
+  }
+  
+  form {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  label {
+    margin-bottom: 5px;
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  textarea {
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+  
+  input[type="submit"] {
+    background-color: grey;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  input[type="submit"]:hover {
+    background-color: #45a049;
+  }
+/* contact us end */
+
+
+
+
+
+
+
+
+
 /* animatation for logo and take action */
 @keyframes shakeButton {
     0% {
@@ -340,7 +463,7 @@ main {
 
 /* media quary */
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1000px) {
     .nav-toggle-label {
         display: none;
     }
