--- a/css/main.css
+++ b/css/main.css
@@ -1,217 +1,281 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-    font-family: 'Roboto', sans-serif;
-    list-style: none;
-    text-decoration: none;
-}
-
 /* website variables */
 :root{
-    --background: rgba(70, 136, 128, 0.32);
+    --background:rgba(244, 124, 0, 1);
+    --Mbackground:#EEF1F4;
 }
 
-/* box reset */
-*,*::before, *::after{
-    box-sizing: border-box;
+body {
+    font-family: 'Roboto', sans-serif;
 }
 
 /* nav style start here */
-
-header{
-    background: var(--background);
-    text-align: center;
-    position: fixed;
-    z-index: 999;
-    width: 100%;
+header {
+    background-color: var(--background);
 }
 
-.logo img{
-    max-width: 120px; 
-    height:auto;
-} 
-/* nav icons to incert later */
-/* .nav-icon i{
-    margin-right: 20px;
-    color: black;
-    font-size: 25px;
-    font-weight: 400;
-    transition: all .42s ease;
-}
-.nav-icon i:hover{
-    transform: scale(1.1);
-    color: red;
-} */
-
-
-/* making the hambuger menu */
-.nav-toggle{
-    display: none;
-}
-.nav-toggle-label{
-    position:absolute;
-    top: 0;
-    left: 0;
-    margin-left: 1em;
-    height: 100%;
+#menu-header {
     display: flex;
-    align-items: center;
-}
-c
-
-.nav-toggle-label span,
-.nav-toggle-label span::before,
-.nav-toggle-label span::after {
-    display: block;
-    background: white;
-    height: 2px;
-    width: 2em;
-    border-radius: 2px;
-    position: absolute;
+    justify-content: space-between;
 }
 
-.nav-toggle-label span::before,
-.nav-toggle-label span::after {
-    content:'';
+#menu-header button {
+    padding: 15px;
+    margin: 20px 10px 0 10px;
+    font-size: 32px;
+    border: none;
+    background: transparent;
+    cursor: pointer;
+    
 }
 
-.nav-toggle-label span::before {
-    bottom: 7px;
+#logo {
+    text-align: center;
 }
 
-.nav-toggle-label span::after {
-    top: 7px;
+#logo img {
+    padding: 20px 0;
+    width: 200px;
+    animation: shakeButton 2s infinite; 
+}
+
+#search {
+    text-align: center;
+    padding-bottom: 50px;
+}
+
+#search-input {
+    padding: 10px 5px;
+    border-radius: 10px;
+    width: 80%;
+    border: 1px solid #444;
+}
+
+/* nav style end here */
+
+
+
+/* making the hambuger menu start */
+
+#menuToggle
+{
+  display: block;
+  position: relative;
+  top: 50px;
+  left: 50px;
+  
+  z-index: 1;
+  
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle a
+{
+  text-decoration: none;
+  color: #ffffff;
+  transition: color 0.3s ease;
+}
+
+#menuToggle a:hover
+{
+  color: var(--background);
 }
 
 
-
-
-
-
-/* working outside in */
-
-nav {
-    position: absolute;
-    text-align: left;
-    top: 100%;
-    left:0;
-    background: var(--background);
-    width:100%; 
-    transform: scale(1, 0);
-    transform-origin: top;
-    transition: transform 400ms ease-in-out;                  
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  
+  cursor: pointer;
+  
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+  
+  -webkit-touch-callout: none;
 }
 
-nav li{
-    margin-bottom: 1em;
-    margin-left: 1em;
+/* hamburger menu */
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  
+  background:black;
+  border-radius: 3px;
+  
+  z-index: 1;
+  
+  transform-origin: 4px 0px;
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
 }
 
-nav a {
-    color: white;
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    opacity: 0;
-    transition: opacity 150ms ease-in-out;
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
 }
-nav a:hover {
-   color: black;
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
 }
-.nav-toggle:checked ~ nav{
-    transform: scale(1, 1);
-} 
 
-.nav-toggle:checked ~ nav a {
-    opacity: 1;
-    transition: opacity 250ms ease-in-out;
-} 
+/* Transform all the slices of hamburger into a crossmark. */
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #ffffff;
+}
 
-.nav-toggle:checked ~ nav a:hover {
-    opacity: 0.5;
-} 
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/* the last slices goes the other direction */
+
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/* Making this absolute positioned at the top left of the screen */
+
+#menu
+{
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  
+  background: rgba(56, 36, 14, 0.811);
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+
+  /* to stop flickering of text in safari */
+  
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+/* And let's slide it in from the left */
+
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
+/* making the hambuger menu ends */
+
 
 /* Take action start */
 
-.Update-news{
-    position: relative;
-    top: 100px;
-    
+main {
+    background-color: var(--Mbackground);
 }
-.up-center-text h2{
+
+.action {
+    padding: 50px 0 50px 0;
+    background-color: #fff;
+    border-radius: 30px 30px 0 0;
+}
+
+.action-text {
     text-align: center;
-    color: #111;
-    font-size: 25px;
-    text-transform: capitalize;
-    font-weight: 700;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
+    font-size: 32px;
 }
-.cart img{
-    width: 380px;
-    height: auto;
-    border-radius: 5px;
-}
-.update-cart{
+
+.action-items {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(380px, auto));
-    gap: 1rem;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: space-between;
 }
-.cart h5{
-    color: #636872;
+
+.p-action {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.p-action img {
+    align-self: center;
+    width: 30vw;
+    margin-bottom: 10px;
+}
+
+.p-action span {
+    text-align: center;
     font-size: 14px;
-    text-transform: capitalize;
-    font-weight: 500;
-}
-.cart h4{
-    color: #111;
-    font-size: 18px;
-    font-weight: 600;
-}
-.cart p{
-    color: #707070;
-    font-size: 15px;
-    max-width: 380px;
-    line-height: 25px;
-    margin-bottom: 12px;
-}
-.cart h6{
-    color: #151515;
-    font-size: 14px;
-    font-weight: 500;
 }
 
 /* Take action end */
-/* main content starts */
 
-.center-text h2{
+
+
+/* main content starts i used grid here because it would be easier to lay out*/
+.trending-rentals{
+     background-color: var(--Mbackground);  
+     padding: 0 10px;
+}
+
+.text {
+    padding-top: 25px;
+}
+
+.text h2{
     color: #111;
     font-size: 28px;
     text-transform: capitalize;
     text-align: center;
     margin-bottom: 30px;
 }
-.center-text span{
-    color: #EE1C47;
+.text p{
+    color: #787172;
 }
 .products{
+    margin: 20px 0;
+    padding-bottom: 20px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(260px, auto));
-    gap: 2rem;
+    grid-template-columns: auto auto;
+    gap: 1rem;
 }
-.row{
+.p-container {
+    background-color: var(--background);
     position: relative;
+    padding: 5px;
+    border-radius: 30px;
     transition: all .40s;
 }
-.row img{
+.p-container img{
     width: 100%;
     height: auto;
+    border-radius: 30px;
     transition: all .40s;
 }
-.row img:hover{
+.p-container img:hover{
     transform: scale(0.9);
 }
-
 .product-text h5{
     position: absolute;
     top: 13px;
@@ -220,46 +284,186 @@ nav a:hover {
     font-size: 12px;
     font-weight: 500;
     text-transform: uppercase;
-    background-color: #27b737;
+    background-color:var(--background);
     padding: 3px 10px;
     border-radius: 2px;
+    animation: pulse-animation 1s infinite;
 }
 .heart-icon{
     position: absolute;
     right: 0;
+    margin-right: 30px;
     font-size: 20px;
 }
 .heart-icon:hover{
     color: #EE1C47;
 }
 .ratting i{
-    color: #FF8C00;
-    font-size: 18px;
+    color: black;
+    font-size: 20px;
 }
 .price h4{
-    color: #111;
-    font-size: 16px;
+    color: white;
+    font-size: 15px;
     text-transform: capitalize;
     font-weight: 400;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 .price p{
     color: #151515;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 600;
+    padding-bottom: 20px;
 }
 
 /* main content ends */
 
 
 
+/* our team start i decided to use the property of flex for this section  */
+.sectionteam {  
+    padding: 20px 10px;
+}
+
+.sectionteam p {  
+    padding: 20px 10px;
+}
+
+.line {
+    margin: 0 10vw;
+    border: 2px var(--background) solid;
+}
+ 
+.team-1 {
+    display: flex; 
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+}
+
+.team-1 img {
+    width: 80px;
+    flex: 1;
+    margin-right: 10px;
+    border-radius: 20px;
+    border: 2px solid #110c0c;
+}
+
+.team-1info {
+    display: flex;
+    flex-direction: column;
+    border-bottom: none;
+    flex: 1;
+} 
+
+.team-1info h2 {
+    font-size: 28px;
+    padding-bottom: 10px;
+}
+
+.team-1info h3 {
+    font-size: 18px;
+    padding-bottom: 10px;
+}
+
+.team-1info p {
+    font-size: 12px;
+}
+
+.s-team {
+    text-align: center;
+    font-size: 40px;
+    margin-bottom: 30px;
+}
+
+/* our team end*/
+
+/* contact us start */
+
+.container {
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: var(--background);
+  }
+  
+  h1 {
+    text-align: center;
+  }
+  
+  form {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  label {
+    margin-bottom: 5px;
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  textarea {
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+  
+  input[type="submit"] {
+    background-color: grey;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  input[type="submit"]:hover {
+    background-color: #45a049;
+  }
+/* contact us end */
 
 
 
 
 
-/* media quary */
 
-@media screen and (min-width: 800px) {
+
+
+
+/* animatation for logo and take action */
+@keyframes shakeButton {
+    0% {
+        transform: translateX(0);
+    }
+    25% {
+        transform: translateX(-5px);
+    }
+    75% {
+        transform: translateX(5px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+@keyframes pulse-animation {
+    0% {
+      transform: scale(1);
+      opacity: 1;
+    }
+    50% {
+      transform: scale(1.2);
+      opacity: 0.5;
+    }
+    100% {
+      transform: scale(1);
+      opacity: 1;
+    }
+  }
+
+
+
+/* media quary to tranform the page from mobile to destop not apart of the reqirements but i still tried*/
+
+@media screen and (min-width: 1000px) {
     .nav-toggle-label {
         display: none;
     }
@@ -268,10 +472,7 @@ nav a:hover {
         display: grid;
         grid-template-columns: 1fr auto minmax(600px,3fr) 1fr;
     }
-    .logo{
-        grid-columns: 2 / span 1;
-
-    }
+ 
     nav {
         all: unset;
         grid-column: 3 / 4;
@@ -313,5 +514,4 @@ nav a:hover {
         transform: scale(1,1);
     }
 }
-
 
